--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 				reader.open('get', evt, true); 
 				console.log(reader.readyState) //gives 1 (?!?!?!)
 				console.log(reader.status) // gives 0 (WHAT THE FUCCCCCCCCCCCCCCCCCCKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK)
-				if (reader.readyState === 4 && reader.status === 200) {  
-					resultreadfile = reader.responseText; 
-					resultreadfilearr = reader.responseText.split("\n"); 
+				rawFile.onreadystatechange = function (){
+					if (reader.readyState === 4 && reader.status === 200) {  
+						resultreadfile = reader.responseText; 
+						resultreadfilearr = reader.responseText.split("\n"); 
+					}
 				}
-				
 				for (var i = 0; i < resultreadfilearr.length; i++) {
 					if (resultreadfilearr[i].substr(0, 1) == "$"){
 						document.getElementById("textanimation").innerHTML += "<input type=\"button\" class=\"1\">" + resultreadfilearr[i+1] + "</input><input type=\"button\" class=\"2\">" + resultreadfilearr[i+2] + "</input>";
