--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 			function readtxt(evt){
 				var resultreadfilearr = [];
 				var resultreadfile = ""
-				var reader = new XMLHttpRequest();
+				if (window.XMLHttpRequest) { // Mozilla, Safari, ...
+				    reader = new XMLHttpRequest();
+				} else if (window.ActiveXObject) { // IE
+				    reader = new ActiveXObject("Microsoft.XMLHTTP");
 				reader.open('get', evt, true); 
 				console.log(reader.readyState) //gives 1 (?!?!?!)
 				console.log(reader.status) // gives 0 (WHAT THE FUCCCCCCCCCCCCCCCCCCKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK)
