--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				reader.onreadystatechange = function(){
 					console.log(reader.readyState) 
 					console.log(reader.status)
-					if (reader.readyState == 4 && (reader.status == 200 || reader.status == 304) {  
+					if (reader.readyState == 4 && (reader.status == 200 || reader.status == 304)) {  
 						resultreadfile = reader.responseText; 
 						resultreadfilearr = reader.responseText.split("\n"); 
 					}
