--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			function arrparser(resultreadfilearr){
 				for (var i = 0, j; i < resultreadfilearr.length; i++) {
 					if (resultreadfilearr[i].substr(0, 1) == "$"){
-						document.getElementById("textanimation").innerHTML += "<input type=\"button\" class=\"" + j + "\">" + resultreadfilearr[i] + "</input>";
+						document.getElementById("textanimation").innerHTML += "<input type=\"button\" class=\"" + j + "\">" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "</input>";
 						j++
 					}
 
