--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
 				}
 				reader.open('GET', evt, true); 
 				reader.send(null);
-				arrparser(resultreadfilearr)
-			}
-
-			function arrparser(resultreadfilearr){
-				for (var i = 0, j; i < resultreadfilearr.length; i++) {
+				for (var i = 0, j = 1; i < resultreadfilearr.length; i++) {
 					if (resultreadfilearr[i].substr(0, 1) == "$"){
 						document.getElementById("textanimation").innerHTML += "<input type=\"button\" class=\"" + j + "\">" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "</input>";
 						j++
