--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						resultreadfilearr = reader.responseText.split("\n"); 
 						for (var i = 0, j = 1; i < resultreadfilearr.length; i++) {
 							if (resultreadfilearr[i].substr(0, 1) == "$"){
-								document.getElementById("textanimation").insertAdjacentHTML('afterend', "<input type=\"button\" class=\"" + j + "\">" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "</input>")
+								document.getElementById("textanimation").insertAdjacentHTML('afterend', "<input type=\"button\" class=\"" + j + "\" name=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\"></input>")
 								if (j==2) 
 									j=0
 								j++
