--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						for (var i = 0, j = 1; i < resultreadfilearr.length; i++) { //parses the text into the document
 							//setTimeout(function(){
 								if (resultreadfilearr[i].substr(0, 1) == "$"){
-									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\" onclick=\"readtxt(\\\"" + resultreadfilearr[i]+1 + "\\\")\"></input>")
+									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\" onclick=\"readtxt(\\\"" + resultreadfilearr[i+1] + "\\\")\"></input>")
 									if (j==2) 
 										j=0
 									j++
