--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			//50% fade the old elements | jS PLEASE!!!!
 			//clear old elements
 			//read text files | AJAX I HATE YOU //success
+			var resultreadfilearr = [];
+			var resultreadfile = ""
 			function readtxt(evt){
-				var resultreadfilearr = [];
-				var resultreadfile = ""
 				if (window.XMLHttpRequest) { // Mozilla, Safari, ...
 					reader = new XMLHttpRequest();
 				} 
@@ -49,7 +49,7 @@
 							//setTimeout(function(){
 								if (resultreadfilearr[i].substr(0, 1) == "$"){
 									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\"></input>")
-									document.getElementsByClassName(j)[0].addEventListener("click", function() {readtxt(resultreadfilearr[i+1]);this.style.backgroundColor = "red";});
+									document.getElementsByClassName(j)[0].addEventListener("click", function() {readtxt(resultreadfilearr[i+1]);this.style.backgroundColor = "green";});
 									if (j==2) 
 										j=0
 									j++
