--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 			//read text files | AJAX I HATE YOU //success
 			var resultreadfilearr = [];
 			var resultreadfile = ""
-			var curridx = ""
 			function readtxt(evt){
 				if (window.XMLHttpRequest) { // Mozilla, Safari, ...
 					reader = new XMLHttpRequest();
@@ -49,10 +48,10 @@
 						for (var i = 0, j = 1; i < resultreadfilearr.length; i++) { //parses the text into the document
 							//setTimeout(function(){
 								if (resultreadfilearr[i].substr(0, 1) == "$"){
-									curridx = i;
 									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\"></input>")
-									var vind = curridx+1
-									document.getElementsByClassName(j)[0].addEventListener("click", function() {readtxt(resultreadfilearr[vind]);this.style.backgroundColor = "green";this.className = "done"});
+									var vind = []
+									vind[j] = i+1
+									document.getElementsByClassName(j)[0].addEventListener("click", function() {readtxt(resultreadfilearr[vind[j]]);this.style.backgroundColor = "green";this.className = "done"});
 									if (j==2) 
 										j=0
 									j++
