--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\"></input>")
 									var vind = []
 									vind[j] = i+1
-									document.getElementsByClassName(j)[0].addEventListener("click", function() {readtxt(resultreadfilearr[vind[j]]);this.style.backgroundColor = "green";})
+									vind1 = vind[1]
+									vind2 = vind[2]
+									if (j==1)
+										document.getElementsByClassName(j)[0].one("click", function() {readtxt(resultreadfilearr[vind1]);this.style.backgroundColor = "green";})
 									if (j==2) 
+										document.getElementsByClassName(j)[0].one("click", function() {readtxt(resultreadfilearr[vind2]);this.style.backgroundColor = "green";})
 										j=0
 									j++
 									i++
