--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									vind1 = vind[1]
 									vind2 = vind[2]
 									if (j==1)
-										document.getElementsByClassName(j)[0].one("click", function() {readtxt(resultreadfilearr[vind1]);this.style.backgroundColor = "green";})
+										$(".1").one("click", function() {readtxt(resultreadfilearr[vind1]);this.style.backgroundColor = "green";})
 									if (j==2) 
-										document.getElementsByClassName(j)[0].one("click", function() {readtxt(resultreadfilearr[vind2]);this.style.backgroundColor = "green";})
+										$(".2").one("click", function() {readtxt(resultreadfilearr[vind2]);this.style.backgroundColor = "green";})
 										j=0
 									j++
 									i++
