--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								var vind = []
 								if (resultreadfilearr[i].substr(0, 1) == "$"){
 									document.getElementById("textanimation").insertAdjacentHTML('beforeend', "<input type=\"button\" class=\"" + j + "\" value=\"" + resultreadfilearr[i].substr(1,resultreadfilearr[i].length -1) + "\"></input>")
-									
+									console.log(j)
 									vind[j] = i+1
 									text1 = resultreadfilearr[vind[1]]
 									text2 = resultreadfilearr[vind[2]]
