--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
 									text1 = resultreadfilearr[vind[1]]
 									text2 = resultreadfilearr[vind[2]]
 									console.log(text1 + ", " + text2)
-									if (j==1)
+									if (j==1){
 										console.log("j==1 pass")
 										$(".1").one("click", function() {readtxt(text1);this.style.backgroundColor = "green";})
-									if (j==2) 
+									}
+									else if (j==2) {
 										console.log("j==2 pass")
 										$(".2").one("click", function() {readtxt(text2);this.style.backgroundColor = "green";})
 										j=0
+									}
 									j++
 									i++
 								}
