>12:00 forgot to initialize vars

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			var resultreadfilearr = [];
 			var resultreadfile = ""
 			var j = 1;
+			var text1, text2
 			function readtxt(evt){
 				if (window.XMLHttpRequest) { // Mozilla, Safari, ...
 					reader = new XMLHttpRequest();
@@ -82,8 +83,6 @@
 				reader.send(null);
 
 			}
-			//fuck yourself
-			//then you can kill yourself :D
 
 
 
