>1:00am added more duct tape

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				$('body, #textcontainer').fadeIn(1500);
 				var time = 0;
 				daynight(time)
-				
+				$(".done").disabled=true;
 				
 			});
 		</script>
